tests/src/errors/invalidAccess.spec.client.ts
const HttpService = game.GetService("HttpService");
HttpService.GetAsync("http://www.example.com");

export {};
